--- a/cycle.yml
+++ b/cycle.yml
@@ -18,6 +18,8 @@ containers:
         remote_access:
           enable: false
     config:
+      deployment:
+        instances: 1
       runtime:
         environment_vars:
           ALLOW_EMPTY_PASSWORD: yes
@@ -54,6 +56,8 @@ containers:
           remote_access:
             enable: true
     config:
+      deployment:
+        instances: 1
       runtime:
         environment_vars:
           MARIADB_HOST: mariadb
