--- a/cycle.yml
+++ b/cycle.yml
@@ -17,57 +17,51 @@ containers:
         readonly: false
         remote_access:
           enable: false
-    config:
-      deployment:
-        instances: 1
-      runtime:
-        environment_vars:
-          ALLOW_EMPTY_PASSWORD: yes
-          MARIADB_USER: bn_magento
-          MARIADB_PASSWORD: test
-          MARIADB_DATABASE: bitnami_magento
-      network:
-        hostname: "mariadb"
-        public: "disable"
-        ports:
-          - "3306"
-      options:
-        monitor:
-          auto_restart: true
-          max_restarts: 3
-          notify:
-            emails:
-              - amattoni@cycle.io
-
+          
+    runtime:
+      environment_vars:
+        ALLOW_EMPTY_PASSWORD: yes
+        MARIADB_USER: bn_magento
+        MARIADB_PASSWORD: test
+        MARIADB_DATABASE: bitnami_magento
+    network:
+      hostname: "mariadb"
+      public: "disable"
+      ports:
+        - "3306"
+    options:
+      monitor:
+        auto_restart: true
+        max_restarts: 3
+        notify:
+          emails:
+            - amattoni@cycle.io
   magento:
-    name: "Magento"
     image: 
       name: "Magento"
       preload: false
       source:
         docker_hub:
           target: "bitnami/magento:latest"
+    runtime:
+      environment_vars:
+        MARIADB_HOST: mariadb
+        MARIADB_PORT_NUMBER: 3306
+        MAGENTO_DATABASE_USER: bn_magento
+        MAGENTO_DATABASE_PASSWORD: test
+        MAGENTO_DATABASE_NAME: bitnami_magento
+        MAGENTO_HOST: {{ instance.ips.public }}
+    network:
+      hostname: magento
+      public: "enable"
+      ports:
+        - "80:80"
+        - "443:443"
     volumes:
-      -
+       -
         destination: /bitnami
         local:
           max_size: 2G
           readonly: false
           remote_access:
             enable: true
-    config:
-      deployment:
-        instances: 1
-      runtime:
-        environment_vars:
-          MARIADB_HOST: mariadb
-          MARIADB_PORT_NUMBER: 3306
-          MAGENTO_DATABASE_USER: bn_magento
-          MAGENTO_DATABASE_PASSWORD: test
-          MAGENTO_DATABASE_NAME: bitnami_magento
-      network:
-        hostname: magento
-        public: "enable"
-        ports:
-          - "80:80"
-          - "443:443"
